widescreen.css
.mobile-only{
    display: none;
}

.desktop-only{
    display: block;
}

header img{
	max-width: 85%;
	max-height: 13vh;
}
#main-img{
	width: 40vw;
	height: 60vh;
	background-image: url('./images/Overview.webp') ;
	background-size:cover;
}

* {box-sizing:border-box}

/* Slideshow container */
.slideshow-container {
  width: 70%;
  max-height: 50vh;
  /* overflow-y: hidden; */
  position: relative;
  margin: auto;
}

/* Hide the images by default */
.mySlides {
  display: none;
  object-fit: contain;

}
.mySlides {
	object-fit: cover;
	transition: display 0.1s ease ;

}

/* Next & previous buttons */
.prev, .next {
  cursor: pointer;
  position: absolute;
  top: 50%;
  width: auto;
  margin-top: -22px;
  padding: 16px;
  color: white;
  font-weight: bold;
  font-size: 18px;
  /* transition: 0.6s ease; */
  border-radius: 0 3px 3px 0;
  user-select: none;
}

/* Position the "next button" to the right */
.next {
  right: 0;
  border-radius: 3px 0 0 3px;
}

/* On hover, add a black background color with a little bit see-through */
.prev:hover, .next:hover {
  background-color: rgba(0,0,0,0.8);
}

/* Caption text */
.text {
  color: #f2f2f2;
  font-size: 15px;
  padding: 8px 12px;
  position: absolute;
  bottom: 0px;
  width: 100%;
  text-align: center;
}


/* Fading animation */
/* .fade {
  -webkit-animation-name: fade;
  -webkit-animation-duration: 5s;
  animation-name: fade;
  animation-duration: 5s !important;
}

@-webkit-keyframes fade {
  from {opacity: .8}
  to {opacity: 1}
}

@keyframes fade {
  from {opacity: .8}
  to {opacity: 1}
} */

.form-section .form-group{
	padding: 0.7rem;
	/* height: 4rem; */
}

.form-section input[type=text], .form-section input[type=email]  {

	/* background-color: #000; */
	color: #7b7b7b;
	line-height: 2;
	border:none;
	border-radius: 0;
	
	border-bottom: #eeeeee 1px solid;
	outline: none;
}
.form-section input[type=text]:valid, .form-section input[type=email]:valid,input:-internal-autofill-selected {
	
	/* background-color: #000 !important; */
	color: #7b7b7b;
	line-height: 2;
	border:none;
	border-radius: 0;
	outline: none;
	border-bottom: #ffce7b 1px solid;
}

.form-section #leadForm h2{
	border-top: #ffce7b 1px solid;
	padding-top: 1rem;
}
.desc-text{
	font-size: 15pt;
	font-family: gotham-book;
	
}
#banner-image{
  max-height: 92vh;
	object-fit: fill;
}

.footer {
	margin: 3rem 0 0 0;
	border: 2px white dashed !important;
  position: relative;
  bottom: 0;
}

.footer p {
  display: flex;
  align-items: center;
  text-align: center;
  border-right: #eeeeee 1px solid;
  height: 125px;
  padding-top: 5px;
  box-sizing: border-box;
  padding-right: 15px;
  /* line-height: 100px; */


}

.footer p :nth-child(-n+2) {
  border: none;
}



.form {
  position: absolute;
  background: White;
  right: 100px;
  top: 120px;
  padding: 2rem;
}


.form > div:nth-child(1) > form:nth-child(1) > h1:nth-child(1) {
  overflow-y: hidden;
}

